Uitwerking van de exercise

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <script src="script.js"></script>
 </head>
 <body id="box">
+        <h1 id="txt">Verander de achtergrond kleur</h1>
         <input type="color" name="" id="colorChoice">
-        <button onclick="knop()">Click me</button>
+        <button onclick="saveColorAsBackround()">Achtergrond kleur opslaan</button>
+        <button onclick="saveT()">Titel kleur opslaan</button>
+        <button onclick="knop()">Kleuren toepassen op pagina</button>
 </body>
 </html>
